--- a/photoGallery/ios/Podfile
+++ b/photoGallery/ios/Podfile
@@ -20,6 +20,10 @@ target 'photoGallery' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
   target 'photoGalleryTests' do
     inherit! :complete
     # Pods for testing
