--- a/photoGallery/android/app/build.gradle
+++ b/photoGallery/android/app/build.gradle
@@ -133,7 +133,7 @@ android {
     defaultConfig {
         applicationId "com.photogallery"
         minSdkVersion rootProject.ext.minSdkVersion
-       // missingDimensionStrategy 'react-native-camera', 'general'
+       missingDimensionStrategy 'react-native-camera', 'general'
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
