--- a/photoGallery/package.json
+++ b/photoGallery/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@wso2/auth-qr-react-native": "file:packages/sdk",
     "axios": "^0.21.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-camera": "^4.2.1",
+    "react-native-device-info": "^7.4.0",
     "react-native-grid-image-viewer": "^1.2.2",
     "react-native-permissions": "^3.2.0",
     "react-native-qrcode-scanner": "^1.5.4",
