--- a/photoGallery/android/app/build.gradle
+++ b/photoGallery/android/app/build.gradle
@@ -196,6 +196,8 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    compile project(':react-native-ssl-pinning')
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
     }
@@ -208,6 +210,10 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
     }
+
+    compile "com.squareup.okhttp3:okhttp:4.9.1"
+    compile "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    compile "com.squareup.okhttp3:okhttp-urlconnection:4.9.1"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
