--- a/photoGallery/android/app/src/main/AndroidManifest.xml
+++ b/photoGallery/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
         <intent-filter>
           <action android:name="android.intent.action.VIEW" />
           <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          <data android:scheme="http" android:host="192.168.1.4" />
+        </intent-filter>
+        <intent-filter>
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
           <category android:name="android.intent.category.BROWSABLE" />   
           <data android:scheme="http" android:host="10.0.2.2" />
         </intent-filter>
